--- a/frontend/web/index.html
+++ b/frontend/web/index.html
@@ -6,7 +6,7 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Full-stack phishing framework built with MFN² stack">
+  <meta name="description" content="Nest.js-based backend for SundePhish">
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
